# Sens_AI

./: .gitignore  README.md
SenseAI-App/: README.md  pubspec.yaml
SenseAI-App/test/: widget_test.dart
datas/testing/: course.json.6k4u0pup.ingestion-65744cd868-lwb57.json  course.json.6k4ubpn9.ingestion-65744cd868-jw6wz.json  course.json.6k504l27.ingestion-65744cd868-jw6wz.json  course.json.6k509agt.ingestion-65744cd868-jw6wz.json  course.test.json.6k4uv715.ingestion-65744cd868-lwb57.json  info.labels  marche.course.lallia_00000001.json.6k55q7p9.ingestion-65744cd868-jw6wz.json  marche.course.teo_00000001.json.6k5661ph.ingestion-65744cd868-jw6wz.json  marche.json.6k2ktfi6.ingestion-55d75df7fb-npqfd.json  marche.json.6k2odut2.ingestion-55d75df7fb-9pq22.json  marche.json.6k2ohprc.ingestion-55d75df7fb-9pq22.json  marche.json.6k2ote82.ingestion-55d75df7fb-c9rcr.json  marche.json.6k2rfn99.ingestion-55d75df7fb-9pq22.json  marche.rmarche.lallia_00000001.json.6k55ifkr.ingestion-65744cd868-lwb57.json  repos.json.6jvmg0gi.ingestion-55d75df7fb-npqfd.json  repos.json.6jvmk5du.ingestion-55d75df7fb-9pq22.json  repos.json.6jvnd9g2.ingestion-55d75df7fb-9pq22.json  repos.json.6jvrvhp0.ingestion-55d75df7fb-9pq22.json  repos.json.6jvu26i8.ingestion-55d75df7fb-9pq22.json  repos.lallia_00000001.json.6k558rcv.ingestion-65744cd868-lwb57.json  repos.teo_00000001.json.6k53orsj.ingestion-65744cd868-wm6tc.json
datas/training/: course.json.6k2peka5.ingestion-55d75df7fb-9pq22.json.6k4v57i1.ingestion-65744cd868-lwb57.json  course.json.6k2pince.ingestion-55d75df7fb-npqfd.json.6k4v57g0.ingestion-65744cd868-jw6wz.json  course.json.6k2pmvlt.ingestion-55d75df7fb-9pq22.json.6k4v57h2.ingestion-65744cd868-wm6tc.json  course.json.6k2qjtq4.ingestion-55d75df7fb-9pq22.json.6k4v57fr.ingestion-65744cd868-lwb57.json  course.json.6k4tork4.ingestion-65744cd868-wm6tc.json  (+49 more)
script_data_acq/: launch_app.bat  launch_app.command  uart_acquisition_ui.py
sens_ia_nordic/: CMakeLists.txt  pm.yml  prj.conf  uart_acquisition_ui.py
sens_ia_nordic/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
sens_ia_nordic/sense_ia_datat001-cpp-mcu-v1/: README.txt
sens_ia_nordic/src/: biohub_max32664.c  biohub_max32664.h  ble.c  ble.h  imu_lsm6.c  imu_lsm6.h  main.cpp  sd.c  sd.h
(+4 files in other folders)
